tests/baselines/reference/prototypePropertyAssignmentMergeWithInterfaceMethod.errors.txt
lovefield-ts.d.ts(4,19): error TS2503: Cannot find namespace 'query'.
lovefield-ts.d.ts(5,24): error TS2503: Cannot find namespace 'schema'.
lovefield-ts.d.ts(7,25): error TS2503: Cannot find namespace 'query'.
lovefield-ts.d.ts(9,14): error TS2552: Cannot find name 'TransactionStats'. Did you mean 'Transaction'?
lovefield.js(3,23): error TS2694: Namespace 'lf' has no exported member 'schema'.
lovefield.js(4,14): error TS2304: Cannot find name 'IThenable'.


==== lovefield-ts.d.ts (4 errors) ====
    // bug #27352, crashes from github.com/google/lovefield
    declare namespace lf {
      export interface Transaction {
        attach(query: query.Builder): Promise<Array<Object>>
                      ~~~~~
!!! error TS2503: Cannot find namespace 'query'.
        begin(scope: Array<schema.Table>): Promise<void>
                           ~~~~~~
!!! error TS2503: Cannot find namespace 'schema'.
        commit(): Promise<void>
        exec(queries: Array<query.Builder>): Promise<Array<Array<Object>>>
                            ~~~~~
!!! error TS2503: Cannot find namespace 'query'.
        rollback(): Promise<void>
        stats(): TransactionStats
                 ~~~~~~~~~~~~~~~~
!!! error TS2552: Cannot find name 'TransactionStats'. Did you mean 'Transaction'?
!!! related TS2728 lovefield.js:1:1: 'Transaction' is declared here.
      }
    }
==== lovefield.js (2 errors) ====
    lf.Transaction = function() {};
    /**
     * @param {!Array<!lf.schema.Table>} scope
                          ~~~~~~
!!! error TS2694: Namespace 'lf' has no exported member 'schema'.
     * @return {!IThenable}
                 ~~~~~~~~~
!!! error TS2304: Cannot find name 'IThenable'.
     */
    lf.Transaction.prototype.begin = function(scope) {};
    